--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,7 @@
   border-radius: 24px;
   text-align: center;
   background-color: #fff;
+  box-shadow: 0 .3em 1em rgba(0,0,0,.5);
 }
 #main #section01 .wrap .gap .container .mobile-cultureBtn-wrap .mobile-cultureBtn span { font-size: 16px; }
 #main #section01 .wrap .gap .container .mobile-cultureBtn-wrap .mobile-cultureBtn span::after {
@@ -427,15 +428,43 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0,0,0,.6);
+  background-color: rgba(0,0,0,.4);
 }
-#main #section01 .wrap .gap .container .mobile-culture .row01 {
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows {
   position: relative;
+  top: 100%;
+  left: 0;
+  width: 100%; 
+  height: 100%;
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row01 {
+  position: relative;
+  padding: 20px 0;
   width: 100%;
   height: 60px;
   background-color: transparent;
 }
-#main #section01 .wrap .gap .container .mobile-culture .row02 {
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row01 .closeBtn-wrap {
+  position: relative;
+  margin: 0 auto;
+  width: 22px;
+  height: 100%;
+  cursor: pointer;
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row01 .closeBtn-wrap .btnLine {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: -1px;
+  margin: 0 auto;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  transform-origin: center;
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row01 .closeBtn-wrap .btnLine01 { transform: rotate(45deg);}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row01 .closeBtn-wrap .btnLine02 { transform: rotate(-45deg);}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 {
   position: relative;
   width: 100%;
   height: 100%;
@@ -444,21 +473,43 @@
   border-radius: 25px 25px 0 0;
   overflow: scroll;
 }
-#main #section01 .wrap .gap .container .mobile-culture .row02 h2 {}
-#main #section01 .wrap .gap .container .mobile-culture .row02 h3 {}
-#main #section01 .wrap .gap .container .mobile-culture .row02 h4 {}
-#main #section01 .wrap .gap .container .mobile-culture .row02 .m-link-list {
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 h2 {
+  font-size: 21px;
+  line-height: 170%;
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 h3 {
+  font-size: 14px;
+  line-height: 150%;
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 h4 {
+  margin: 24px 0 0;
+  font-size: 18px;
+  line-height: 250%;
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list {
   position: relative;
   width: 100%;
   height: auto;
 }
-#main #section01 .wrap .gap .container .mobile-culture .row02 .m-link-list .link-item {
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item {
   float: left;
   display: table;
   width: 50%;
   height: 90px;
+  border-bottom: 1px solid rgb(238,238,238);
 }
-#main #section01 .wrap .gap .container .mobile-culture .row02 .m-link-list .link-item a {
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item:nth-child(odd) { 
+  border-left: 1px solid rgb(238,238,238); 
+  border-right: 1px solid rgb(238,238,238);
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item:nth-child(even) { 
+  border-right: 1px solid rgb(238,238,238); 
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item:nth-child(1),
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item:nth-child(2) {
+  border-top: 1px solid rgb(238,238,238); 
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item a {
   display: table-cell;
   width: 100%;
   height: 100%;
