--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,162 @@
   background-position: -241px -285px;
   border: 0;
 }
+/*-------------header:search-area----------------*/
+#header .wrap .gap .container .search-area {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0,0,0,.5);
+}
+#header .wrap .gap .container .search-area .search-rows {
+  position: relative;
+  width: 100%;
+  height: 725px;/*auto*/
+}
+#header .wrap .gap .container .search-area .search-rows .search-row {
+  position: relative;
+  width: 100%;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row01 {
+  position: relative; 
+  padding: 105px 0 110px;
+  height: 390px;
+  background: #000;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row01 .search-closeBtn {
+  position: absolute;
+  top: 32px;
+  right: 6px;
+  width: 32px;
+  height: 32px;
+  background-color: transparent;
+  cursor: pointer;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row01 .search-closeBtn .btnLine {
+  position: absolute;
+  top: calc(50% - 1px);
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  transform-origin: center;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row01 .search-closeBtn .btnLine01 { transform: rotate(45deg); }
+#header .wrap .gap .container .search-area .search-rows .search-row01 .search-closeBtn .btnLine02 { transform: rotate(-45deg); }
+#header .wrap .gap .container .search-area .search-rows .search-row01 .row01-contents{
+  position: relative;
+  margin: 0 auto;
+  width: 600px;
+  height: 100%;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row01 .row01-contents .search-form .input-wrap {
+  width: 100%;
+  height: 80px;
+  border-bottom: 2px solid #fff;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row01 .row01-contents .search-form .input-wrap input {
+  float: left;
+  padding: 20px 2px 25px;
+  border: 0;
+  width: calc(100% - 50px);
+  height: 100%;
+  font-size: 2rem;
+  color: #fff;
+  background-color: #000;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row01 .row01-contents .search-form .input-wrap .search-icon {
+  float: right;
+  margin: 22px 11px;
+  width: 28px;
+  height: 28px;
+  background: url(../img/main/common_sprites.svg) -10px -285px no-repeat;
+  cursor: pointer;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row01 .row01-contents .serch-result {}
+/* #header .wrap .gap .container .search-area .search-rows .search-row01 .row01-contents .serch-result .result {} */
+#header .wrap .gap .container .search-area .search-rows .search-row01 .row01-contents .searh-history {}
+#header .wrap .gap .container .search-area .search-rows .search-row01 .row01-contents .searh-history .no-history { font-size: 16px; }
+/* #header .wrap .gap .container .search-area .search-rows .search-row01 .row01-contents .searh-history .history { font-size: 16px; } */
+#header .wrap .gap .container .search-area .search-rows .search-row02 {
+  position: relative;
+  width: 100%;
+  height: 335px;
+  background-color: #fff;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1230px;
+  height: 100%;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-col {
+  float: left;
+  padding: 55px 0 62px;
+  width: 615px;
+  height: 100%;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-col h2 {
+  font-size: 26px;
+  line-height: 100%;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-tags { padding-right: 50px; line-height: 50px;}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-tags h2 { height: 60px; }
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-tags .tag {
+  display: inline-block;
+  margin-right: 6px;
+  padding: 4px 16px;
+  background: #f9faf9;
+  color: #444;
+  font-size: 16px;
+  line-height: 200%;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-event {}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-event h2 { height: 51px; }
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-event li {
+  float: left;
+  width: 300px;
+  height: 168px;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-event li:nth-child(2) { float: right; }
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-event li a {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url(../img/main/event02.jpg) 50% 50% no-repeat;
+  background-size: 100% 100%;
+}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-event li:nth-child(2) a {
+  background: url(../img/main/event03.jpg) 0 0 no-repeat;
+  background-size: 100% 100%;
+} 
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-event li a::after {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.2);
+} 
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-event li a p {
+  z-index: 2;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  padding: 20px 25px;
+  color: #fff;
+  font-size: 18px;
+  white-space: nowrap;
+  line-height: 100%;
+} 
+
 /*-------------header:mobile----------------*/
 #header .wrap .gap .container .header-right .mobile-gnb { display: inline-block; }
 #header .wrap .gap .container .header-right .mobile-gnb .mobile-trigger-wrap {
@@ -482,34 +638,39 @@
   line-height: 150%;
 }
 #main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 h4 {
-  margin: 24px 0 0;
   font-size: 18px;
   line-height: 250%;
 }
-#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list {
-  position: relative;
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list-wrap {
+  padding: 24px 0;
   width: 100%;
   height: auto;
 }
-#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item {
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list-wrap .m-link-list {
+  position: relative;
+  margin-bottom: 24px;
+  width: 100%;
+  height: auto;
+}
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list-wrap .m-link-list .link-item {
   float: left;
   display: table;
   width: 50%;
   height: 90px;
   border-bottom: 1px solid rgb(238,238,238);
 }
-#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item:nth-child(odd) { 
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list-wrap .m-link-list .link-item:nth-child(odd) { 
   border-left: 1px solid rgb(238,238,238); 
   border-right: 1px solid rgb(238,238,238);
 }
-#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item:nth-child(even) { 
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list-wrap .m-link-list .link-item:nth-child(even) { 
   border-right: 1px solid rgb(238,238,238); 
 }
-#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item:nth-child(1),
-#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item:nth-child(2) {
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list-wrap .m-link-list .link-item:nth-child(1),
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list-wrap .m-link-list .link-item:nth-child(2) {
   border-top: 1px solid rgb(238,238,238); 
 }
-#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list .link-item a {
+#main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows .row02 .m-link-list-wrap .m-link-list .link-item a {
   display: table-cell;
   width: 100%;
   height: 100%;
