--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,28 @@
-* {
-  box-sizing: border-box;
+@charset "UTF-8";
+
+@font-face {
+  src: url(../fonts/YouandiModernTR.eot);
+  src: url(../fonts/YouandiModernTR.woff);
+  src: url(../fonts/YouandiModernTR.ttf);
+  font-family: "YouandiModern";
 }
 
-#header{
+* {
+  box-sizing: border-box;
+  font-family: "YouandiModern";
+}
+
+#header {
   position: fixed;
   z-index: 99;
   top: 0;
   left: 0;
   width: 100%;
   height: 95px;
+  background: #fff;
+  border-bottom: 1px solid #fff;
 }
+#header.scroll-border { border-bottom: 1px solid #000; }
 #header .wrap {
   position: relative;
   margin: 0 auto;
@@ -27,15 +40,14 @@
   width: 100%;
   height: 100%;
   line-height: 95px;
-  background: #B8CDD3;
 }
 #header .wrap .gap .container .logo-wrap {
-    display: inline-block;
-    margin-right: 30px;
+  display: inline-block;
+  margin-right: 30px;
 }
 #header .wrap .gap .container .logo-wrap .logo {
-    font-size: 30px;
-    font-weight: 600;
+  font-size: 30px;
+  font-weight: 600;
 }
 #header .wrap .gap .container .gnb {
   display: inline-block;
@@ -258,7 +270,6 @@
   width: 44px;
   height: 40px;
   padding: 10px;
-  background-color: beige;
 }
 #header .wrap .gap .container .header-right .mobile-gnb .mobile-trigger-wrap .trigger {
   display: block;
@@ -276,8 +287,9 @@
   background-color: rgba(0,0,0,.3);
 }
 #header .wrap .gap .container .mobile-gnb-menu .mobile-menu-btn {
+  z-index: 2;
   position: absolute;
-  top: 24px;
+  top: 6px;
   right: 285px;/*315px+10px-40px*/
   padding: 8px;
   width: 40px;
@@ -285,20 +297,22 @@
   cursor: pointer;
   background-color: transparent;
 }
-#header .wrap .gap .container .mobile-gnb-menu .mobile-menu-btn .mobile-btn-bar01 {
+#header .wrap .gap .container .mobile-gnb-menu .mobile-menu-btn .mobile-btn-bar {
   display: block;
   width: 100%;
   height: 2px;
-  margin-bottom: 10px;
-  background-color: #000;
+  background-color: #fff;
+  transform-origin: center;
 }
+#header .wrap .gap .container .mobile-gnb-menu .mobile-menu-btn .mobile-btn-bar01 { transform: rotate(45deg); }
 #header .wrap .gap .container .mobile-gnb-menu .mobile-menu-btn .mobile-btn-bar02 {
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: #000;
+  position: relative;
+  top: -2px;
+  left: 0;
+  transform: rotate(-45deg);
 }
 #header .wrap .gap .container .mobile-gnb-menu .scroll-menu {
+  z-index: 1;
   position: absolute;
   top: 0;
   right: -40px;
