--- a/css/style.css
+++ b/css/style.css
@@ -118,11 +118,12 @@
 #header .wrap .gap .container .search-area .search-rows {
   position: relative;
   width: 100%;
-  height: 725px;/*auto*/
+  height: 725px;
 }
 #header .wrap .gap .container .search-area .search-rows .search-row {
   position: relative;
   width: 100%;
+  height: 100%;
 }
 #header .wrap .gap .container .search-area .search-rows .search-row01 {
   position: relative; 
@@ -207,11 +208,14 @@
   font-size: 26px;
   line-height: 100%;
 }
-#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-tags { padding-right: 50px; line-height: 50px;}
+#header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-tags { 
+  padding-right: 50px; 
+  line-height: 50px;
+}
 #header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-tags h2 { height: 60px; }
 #header .wrap .gap .container .search-area .search-rows .search-row02 .row02-contents .search-tags .tag {
   display: inline-block;
-  margin-right: 6px;
+  margin-right: 12px;
   padding: 4px 16px;
   background: #f9faf9;
   color: #444;
@@ -261,7 +265,81 @@
   white-space: nowrap;
   line-height: 100%;
 } 
-
+/*-------------header:mobile search-area----------------*/
+#header .wrap .gap .container .m-search-area {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #fff;
+}
+#header .wrap .gap .container .m-search-area .m-search-closeBtn {
+  z-index: 2;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 7px 4px;
+  width: 40px;
+  height: 40px;
+  background: url(../img/main/common_sprites.svg) -334px -150px no-repeat;
+  transform-origin: center;
+  transform: rotate(180deg);
+  cursor: pointer;
+}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row01 {
+  position: relative;
+  width: 100%;
+  height: 54px;
+}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row01 input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 16px 52px 15px 48px;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row01 i {}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row02 {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  border-top: 1px solid rgba(0,0,0,.2);
+}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row02 a {
+  float: left;
+  width: 50%;
+  height: 100%;
+  line-height:40px;
+  font-size: 13px;
+  text-align: center;
+  border-bottom: 1px solid rgba(0,0,0,.2);
+}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row02 a.selected { border-bottom: 1px solid #000; }
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row03 { position: relative; }
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row03 ul {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row03 ul.selected { display: block; }
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row03 .m-search-tags {}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row03 .m-search-tags .tags {}
+#header .wrap .gap .container .m-search-area .m-search-rows-wrap .m-search-row03 .m-search-history .no-history { font-size: 16px; }
 /*-------------header:mobile----------------*/
 #header .wrap .gap .container .header-right .mobile-gnb { display: inline-block; }
 #header .wrap .gap .container .header-right .mobile-gnb .mobile-trigger-wrap {
