--- a/css/queries.css
+++ b/css/queries.css
@@ -32,17 +32,37 @@
     line-height: 160%;
     white-space: normal;
   }
-
+  /*-----common main-----*/
+  #main section {
+    width: 100%;
+    height: auto;
+    padding-bottom: 9.7560%; /*120px/1230 :section01, section03, section04*/
+  }
   #main section .wrap { width: 100%; }
   #main section .wrap .gap { padding: 0 30px; }
   #main section .wrap .gap .container { width: 100%; }
-  
+  /*-----sectio01-----*/
+  #main #section01 { padding-top: 12.30%; }/*100px/1230*/
   #main #section01 .wrap .gap .container .section01-col01 { width: 65.04650465%; }/*800px/1230*/
   #main #section01 .wrap .gap .container .culture { width: 21.95129512%; }/*270/1230px*/
   #main #section01 .wrap .gap .container .culture .link-box .link-list .link-item {
     width: 100%;
     height: 75px;
   }
+  /*-----sectio02:post-----*/
+  #main #section02 { padding: 6.504% 0 8.7804% 0; }/*80px 0 108px 0*/
+  #main #section02 .wrap .gap .container .post-wrap .post-box { 
+    margin-right: 2.4390%;/*30px/1230*/ 
+    width: 23.1707%; /*285px/1230*/
+  }
+  #main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap { padding: 8.0701% 0; }
+  #main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap h5 { font-size: 13px; }
+  #main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap h3 { 
+    padding: 6.3157% 0 4.9122%;
+    font-size: 18px; 
+  }
+  #main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap h4 { font-size: 16px; }
+  /*-----sectio03:event-----*/
   #main #section03 .wrap .gap .container .event-wrap { 
     position: relative; 
     width: 100%; 
@@ -60,18 +80,13 @@
   /*#main #section03 .wrap .gap .container .event-wrap .event-box01 { margin-right: 2.56410256%;}*//*30px/(1230px-60)*/
   #main #section03 .wrap .gap .container .event-wrap .event-box .event-link { position: relative; padding: 0; }
   #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    padding: 5.78947368% 5.26315789%;/*33px/570 30px/570*/
-    width: 100%;
-    height: 50%;
-    font-size: 3.85964912%;/*22px/570*/
-    line-height: 60px;
-    text-align: left;
-    color: #fff;
+    padding: 5.5% 5%;
   }
-  #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text p { font-size: 18px; }
+  #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text h3 {
+    padding: 2.666% 0 4%;
+    font-size: 22px;
+  } 
+  #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text p { font-size: 16px; }
   /*-----section04 : notice-----*/
   #main #section04 .wrap .gap .container .notice-contents { width: auto; }
   #main #section04 .wrap .gap .container .notice-contents .notice-item { 
@@ -81,6 +96,8 @@
     float: right;
     margin-right: 0; 
   }
+  /*-----footer-----*/
+  #main #section05 { padding: 5.691% 0 6.2601%; }/*70 77*/
   /*-----footer-----*/
   #footer .wrap { width: 100%; }
   #footer .wrap .gap { padding: 0 30px; }
@@ -109,18 +126,85 @@
     padding-bottom: 40px; 
   }
   #main section .wrap .gap { padding: 0 20px; }
-
+  /*-----common: title-----*/
+  #main section .wrap .gap .container .full-title {
+    box-sizing: border-box;
+    height: 44px;
+    line-height: 100%;
+    padding-bottom: 20px;
+  }
+  #main section .wrap .gap .container .full-title .title-text{ 
+    font-size: 24px; 
+  }
+  #main section .wrap .gap .container .full-title .view-more a {
+    font-size: 12px;
+    font-weight: 500;
+    color: #222222;
+  }
+  #main section .wrap .gap .container .full-title .view-more a::after{ display: none; }
   /*-----section01-----*/
   #main #section01 { 
     margin-top: 53px;/*header height*/
     padding-top : 16px; 
   }
-
-  #main #section02 { padding-top: 40px; }
   #main #section03,
   #main #section04 { padding-top: 43px; }
 
+  /*-----section02-----*/
+  #main #section02 { padding: 40px 0; }
+  #main #section02 .wrap .gap .container .post-wrap .post-box{
+    margin-right:0;
+    width: 49.5744%;/*466px/940*/
+    border-radius: 8px;
+    overflow: hidden;
+  }
+  #main #section02 .wrap .gap .container .post-wrap .post-box:nth-child(odd) { margin-right: 0.7446%; } /*7px/940*/
+  #main #section02 .wrap .gap .container .post-wrap .post-box:nth-child(1),
+  #main #section02 .wrap .gap .container .post-wrap .post-box:nth-child(2) { margin-bottom: 0.7446%; } /*7px/940*/
+  #main #section02 .wrap .gap .container .post-wrap .post-box a .img-box::after{ 
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: rgba(0,0,0,.2);
+  } 
+  #main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap {
+    position: absolute;
+    top: calc(100% - 90px);
+    left: 12px;
+    padding: 14px 0;
+    box-sizing: content-box;
+    width: 116px;/*javascript*/
+    height: 62px;
+  }
+  #main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap h5{
+    display: inline-block;
+    padding: 0 6px;
+    border: 1px solid #fff;
+    border-radius: 12px;;
+    font-weight: 100;
+    font-size: 10px;
+    line-height: 1rem;
+    color: #fff;
+  }
+  #main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap h3{
+    padding: 4px 0;
+    font-size: 17px;
+    font-weight: 200;
+    line-height: 120%;
+    color: #fff;
+  }
+  #main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap h4 { display: none; }
+  /*-----section03: event-----*/
+  #main #section03 .wrap .gap .container .event-wrap .event-box {
+    border-radius: 8px;
+    overflow: hidden;
+  }
   /*-----section04: mobile-notice-----*/
+  #main #section04 { padding: 43px 0 40px; }
   #main #section04 .wrap .gap .container .section-title {
     display: block;
     width: 100%;
@@ -132,10 +216,6 @@
   }
   #main #section04 .wrap .gap .container .notice-contents { display: none; }
   #main #section04 .wrap .gap .container .m-notice-contents { display: block; }
-  #main #section04 .wrap .gap .container .m-notice-contents .m-notice-item { 
-    
-  }
-
   /*-----section05-----*/
   #main #section05 { display: none; }
   /*-----footer-----*/
@@ -174,27 +254,38 @@
 }
 
 @media screen and (max-width: 780px) {
-  #main #section03 .wrap .gap .container .event-wrap {
-    position: relative;
-    width: 100%; 
-    padding-bottom: 125.67567567%;/*930px/(780-40)*/
-  }
-  #main #section03 .wrap .gap .container .event-wrap .event-box {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 49.49536559%;/*460px/930*/
-  }
-  #main #section03 .wrap .gap .container .event-wrap .event-box02 { top: 50.53763440%; }
-  #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text {
-    top: 0;
-    padding: 17px 15px;
-    height: auto;
-    font-size: 17px;
-    line-height: 32px;
-  }
-  #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text p { font-size: 13px; }
+    /*-----section03: event-----*/
+    #main #section03 .wrap .gap .container .event-wrap {
+      position: relative;
+      width: 100%; 
+      padding-bottom: 125.67567567%;/*930px/(780-40)*/
+    }
+    #main #section03 .wrap .gap .container .event-wrap .event-box {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 49.49536559%;/*460px/930*/
+    }
+    #main #section03 .wrap .gap .container .event-wrap .event-box02 { top: 50.53763440%; }
+    #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text {
+      top: 0;
+      padding: 17px 15px;
+      height: auto;
+    }
+    #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text p { font-size: 13px; }
+    /*-----section04: mobile-notice-----*/
+    #main #section04 .wrap .gap .container .section-title {
+      display: block;
+      width: 100%;
+    }
+    #main #section04 .wrap .gap .container .section-title .title-text { float: left; }
+    #main #section04 .wrap .gap .container .section-title .view-more { 
+      float: right; 
+      margin-top: 0;
+    }
+    #main #section04 .wrap .gap .container .notice-contents { display: none; }
+    #main #section04 .wrap .gap .container .m-notice-contents { display: block; }
 }
 
 @media screen and (max-width: 640px) {
