--- a/css/style.css
+++ b/css/style.css
@@ -529,8 +529,8 @@
 /*-------------main:common----------------*/
 #main {
   position: relative;
-  /* z-index:1; */
-  /*margin-top: 96px;*/
+  z-index:1;
+  /* margin-top: 96px; */
   width: 100%;
   height: 100%;
 }
@@ -576,13 +576,15 @@
 #main section .wrap .gap .container .section-title .title-more {
   font-size: 18px;
 }
-/* #main section .wrap .gap .container .full-title .title-more { float: right; } */
 #main section .wrap .gap .container .full-title {
+  width: 100%;
   height: 78px;
   line-height: 48px;
+  padding-bottom: 30px;
 }
 #main section .wrap .gap .container .full-title .title-text{ 
   font-family: "YouandiModern";
+  font-size: 40px;
   font-weight: 800;
   float: left; 
 }
@@ -696,7 +698,6 @@
   display: block;
   background: gold;
   text-align: center;
-  line-height: ;
 }
 
 #main #section01 .wrap .gap .container .section01-col01 .monthly-list li a .day {
@@ -918,10 +919,10 @@
 #main #section01 .wrap .gap .container .mobile-culture {
   z-index: 100;
   position: fixed;
-  top: 0;
+  top: 52px;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: calc( 100vh - 52px);
   background-color: rgba(0,0,0,.4);
 }
 #main #section01 .wrap .gap .container .mobile-culture .mobile-culture-rows {
@@ -1017,42 +1018,56 @@
 }
 /*-------------section02:post----------------*/
 #main #section02 { padding: 80px 0 108px 0; }
-#main #section02 .wrap .gap .container { height: 506px; }
-#main #section02 .wrap .gap .container .full-title{ width: 100%; }
+#main #section02 .wrap .gap .container { height: auto; }/*521px*/
 #main #section02 .wrap .gap .container .post-wrap{
   width: 100%;
-  height: 100%;
+  height: auto;/*443px*/
 }
 #main #section02 .wrap .gap .container .post-wrap .post-box{
   float: left;
   margin-right: 30px;
+  width: 285px;
 }
 #main #section02 .wrap .gap .container .post-wrap .post-box:last-child { margin: 0;}
-#main #section02 .wrap .gap .container .post-wrap .post-box .img-box{
-  width: 285px;
-  height: 285px;
+#main #section02 .wrap .gap .container .post-wrap .post-box a {
+  display: block;
+  position: relative;
+  width: 100%;
 }
-#main #section02 .wrap .gap .container .post-wrap .post-box .img-box img{ width: 100%; }
-
-#main #section02 .wrap .gap .container .post-wrap .post-box .text-wrap{
+#main #section02 .wrap .gap .container .post-wrap .post-box a .img-box{ 
+  position: relative;
+  width: 100%; 
+  height: auto;
+  /* overflow-y: hidden; */
+}
+#main #section02 .wrap .gap .container .post-wrap .post-box a .img-box img { 
+  position: relative;
+  width: 100%; 
+}
+#main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap {
+  position: relative;
+  padding: 23px 0;
+  width: 100%;
+  height: auto;
   font-family: "Noto Sans KR" , sans-serif;
 }
-#main #section02 .wrap .gap .container .post-wrap .post-box .text-wrap h5{
+#main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap h5{
   display: inline-block;
-  padding-top: 23px;
   border-bottom: 2px solid #666;
   font-weight: 900;
   font-size: 14px;
-  /* line-height: 1.4rem; */
-  /* color: #222; */
+  line-height: 1.4rem;
+  color: #222;
 }
-#main #section02 .wrap .gap .container .post-wrap .post-box .text-wrap h3{
-  padding-top: 18px;
+#main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap h3{
+  padding: 18px 0 14px;
   font-size: 20px;
   font-weight: 900;
 }
-#main #section02 .wrap .gap .container .post-wrap .post-box .text-wrap h4{
+#main #section02 .wrap .gap .container .post-wrap .post-box a .text-wrap h4{
+  display: block;
   font-size: 18px;
+  line-height: 150%;
   color: #666;
 }
 /*-------------section03:event----------------*/
@@ -1089,26 +1104,27 @@
   width: 100%;
   height: 100%;
   content: '';
-  background: rgba(0,0,0,.2);
+  background: rgba(0,0,0,.3);
 }
-#main #section03 .wrap .gap .container .event-wrap .event-box02 .event-link::after { background: rgba(0,0,0,.1);}
+#main #section03 .wrap .gap .container .event-wrap .event-box02 .event-link::after { background: rgba(0,0,0,.2);}
 #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text {
   z-index: 2;
   position: absolute;
   left: 0;
   bottom: 0;
-  padding: 33px 30px;
   width: 100%;
-  height: 50%;
-  font-size: 22px;
-  font-weight: 600;
-  line-height: 60px;/*60px*/
+  height: auto;
+  padding: 33px 30px;
+  font-family: 'Noto Sans KR', sans-serif;
   text-align: left;
   color: #fff;
 }
-#main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text p { 
-  font-size: 16px;
-}
+#main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text h3 {
+  padding: 16px 0 12px;
+  font-size: 22px;
+  font-weight: 600;
+} 
+#main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text p { font-size: 16px; }
 /*-------------section04:notice----------------*/
 #main #section04 { padding-top: 6px; }
 #main #section04 .wrap .gap .container { 
@@ -1143,7 +1159,12 @@
   height: 100%;
 }
 #main #section04 .wrap .gap .container .notice-contents .notice-item:last-child { margin-right: 75px; }
-#main #section04 .wrap .gap .container .notice-contents .notice-item h3 {
+#main #section04 .wrap .gap .container .notice-contents .notice-item a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+#main #section04 .wrap .gap .container .notice-contents .notice-item a h3 {
   height: 86px;
   font-size: 22px;
   font-weight: 500;
@@ -1151,13 +1172,13 @@
   color: #222222;
   border-bottom: 2px solid #000;
 }
-#main #section04 .wrap .gap .container .notice-contents .notice-item p {
+#main #section04 .wrap .gap .container .notice-contents .notice-item a p {
   padding: 16px 4px 18px 0;
   font-size: 18px;
   line-height: 170%;
   color: #444444;
 }
-#main #section04 .wrap .gap .container .notice-contents .notice-item span {
+#main #section04 .wrap .gap .container .notice-contents .notice-item a span {
   font-size: 14px;
   color: #999999;
 }
@@ -1213,13 +1234,13 @@
 #main #section04 .wrap .gap .container .m-notice-contents .m-notice-acc .m-acc-menu {
   padding: 20px 25px;
   width: 100%;
-  height: 80px;
-  background-color: #777;
+  height: auto;
+  font-size: 13px;
+  line-height: 180%;
+  color: #777;
+  background-color: rgba(0, 0, 0, .1);
   display: none;
 }
-/* #main #section04 .wrap .gap .container .m-notice-contents .m-notice-acc .m-acc-menu.activ-acc { display: block; } */
-
-
 /*-------------section05:apps----------------*/
 #main #section05 {
   display: block;
