--- a/css/queries.css
+++ b/css/queries.css
@@ -4,7 +4,6 @@
 
   #header .wrap { width: 100%; }
   #header .wrap .gap { padding: 0 30px; }
-
   #header .wrap .gap .container .search-area .search-rows .search-row02 {
     position: relative;
     width: 100%;
@@ -111,22 +110,18 @@
     top: 30px;
     left: 177px;
   }
-  #footer .scroll-top-btn { right: 8px; }
+  #footer .scroll-top-btn { right: 10px; }
 }
 
 @media screen and (max-width: 980px) {
-  
   /*-----header-----*/
   #header { height: 53px; }
   #header .wrap .gap { padding: 6px 20px 7px; }
   #header .wrap .gap .container { line-height: 35px; }
   #header .wrap .gap .container .logo-wrap { height: 100%;}
-  
   /*-----main-----*/
   #main,
-  #main section { 
-    padding-bottom: 40px; 
-  }
+  #main section { padding-bottom: 40px; }
   #main section .wrap .gap { padding: 0 20px; }
   /*-----common: title-----*/
   #main section .wrap .gap .container .full-title {
@@ -135,9 +130,7 @@
     line-height: 100%;
     padding-bottom: 20px;
   }
-  #main section .wrap .gap .container .full-title .title-text{ 
-    font-size: 24px; 
-  }
+  #main section .wrap .gap .container .full-title .title-text{ font-size: 24px; }
   #main section .wrap .gap .container .full-title .view-more a {
     font-size: 12px;
     font-weight: 500;
@@ -151,7 +144,6 @@
   }
   #main #section03,
   #main #section04 { padding-top: 43px; }
-
   /*-----section02-----*/
   #main #section02 { padding: 40px 0; }
   #main #section02 .wrap .gap .container .post-wrap .post-box{
@@ -243,9 +235,7 @@
     content:''; 
     margin: 0;
   }
-  #footer .wrap .gap .container .cont-wrap .content:nth-child(4) { 
-    display: inline-block; 
-  }
+  #footer .wrap .gap .container .cont-wrap .content:nth-child(4) { display: inline-block; }
   #footer .wrap .gap .container .cont-wrap span:last-child {
     float: none; 
     display: inline-block;
@@ -257,38 +247,38 @@
 }
 
 @media screen and (max-width: 780px) {
-    /*-----section03: event-----*/
-    #main #section03 .wrap .gap .container .event-wrap {
-      position: relative;
-      width: 100%; 
-      padding-bottom: 125.67567567%;/*930px/(780-40)*/
-    }
-    #main #section03 .wrap .gap .container .event-wrap .event-box {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 49.49536559%;/*460px/930*/
-    }
-    #main #section03 .wrap .gap .container .event-wrap .event-box02 { top: 50.53763440%; }
-    #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text {
-      top: 0;
-      padding: 17px 15px;
-      height: auto;
-    }
-    #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text p { font-size: 13px; }
-    /*-----section04: mobile-notice-----*/
-    #main #section04 .wrap .gap .container .section-title {
-      display: block;
-      width: 100%;
-    }
-    #main #section04 .wrap .gap .container .section-title .title-text { float: left; }
-    #main #section04 .wrap .gap .container .section-title .view-more { 
-      float: right; 
-      margin-top: 0;
-    }
-    #main #section04 .wrap .gap .container .notice-contents { display: none; }
-    #main #section04 .wrap .gap .container .m-notice-contents { display: block; }
+  /*-----section03: event-----*/
+  #main #section03 .wrap .gap .container .event-wrap {
+    position: relative;
+    width: 100%; 
+    padding-bottom: 125.67567567%;/*930px/(780-40)*/
+  }
+  #main #section03 .wrap .gap .container .event-wrap .event-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 49.49536559%;/*460px/930*/
+  }
+  #main #section03 .wrap .gap .container .event-wrap .event-box02 { top: 50.53763440%; }
+  #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text {
+    top: 0;
+    padding: 17px 15px;
+    height: auto;
+  }
+  #main #section03 .wrap .gap .container .event-wrap .event-box .event-link .event-text p { font-size: 13px; }
+  /*-----section04: mobile-notice-----*/
+  #main #section04 .wrap .gap .container .section-title {
+    display: block;
+    width: 100%;
+  }
+  #main #section04 .wrap .gap .container .section-title .title-text { float: left; }
+  #main #section04 .wrap .gap .container .section-title .view-more { 
+    float: right; 
+    margin-top: 0;
+  }
+  #main #section04 .wrap .gap .container .notice-contents { display: none; }
+  #main #section04 .wrap .gap .container .m-notice-contents { display: block; }
 }
 
 @media screen and (max-width: 640px) {
